# csghub-sdk

./: .env.example  .gitignore  AGENTS.md  MANIFEST.in  Makefile  README.md  README_EN.md  README_cn.md  _token.py  build.py  cache.py  constants.py  csghub_api.py  errors.py  file_download.py  launch.py  pyproject.toml  run_finetune_bert.py  run_mind_inference.py  run_others_models.py  setup.py  snapshot_download.py  utils.py
doc/: cli.md  cli_cn.md  sdk.md  sdk_cn.md
examples/: README.md  README_EN.md  README_cn.md  download_dataset.py  download_file.py  download_file_parallel.py  download_model.py  download_with_custom_progress.py  download_with_progress.py  load_dataset.py  model_eval.py  push_new_branch.py  push_new_repo.py  run_finetune_bert.py  run_wukong_inference.py  sandbox_cli.py  sandbox_sdk.py  upload_file.py  upload_large_folder.py  upload_repo.py
pycsghub/: __init__.py  _token.py  api_client.py  cache.py  cli.py  cli_utils.py  commit_ops.py  constants.py  csghub_api.py  errors.py  file_download.py  file_upload.py  gitwrapper.py  lfs.py  repository.py  snapshot_download.py  utils.py
pycsghub/api_client/: __init__.py  api_client.py  api_client_interface.py  api_client_xet.py
pycsghub/cmd/: dataset.py  finetune.py  inference.py  model.py  repo.py  repo_types.py  sandbox.py  system.py
pycsghub/repo_reader/: __init__.py
pycsghub/repo_reader/dataset/huggingface/: load.py
pycsghub/repo_reader/model/huggingface/: model_auto.py
pycsghub/sandbox_client/: __init__.py  client.py  config.py  models.py
pycsghub/test/: cli_download_test.py  get_api_test.py  repo_integration_test.py  repository_delete_test.py  snapshot_download_test.py  test_sandbox_cli.py  utils_test.py
pycsghub/test/repo_reader/: reader_test.py
pycsghub/test/sandbox_client/: __init__.py  conftest.py  test_client.py  test_models.py
pycsghub/upload_large_folder/: _commit_api.py  _local_folder.py  _upload_large_folder.py  api.py  consts.py  errors.py  file.py  fixes.py  hashlib.py  jobs.py  lfs.py  local_folder.py  main.py  path.py  sha.py  slices.py  status.py  tqdm.py  utils.py  workers.py
repo_reader/model/huggingface/: model_auto.py
test/: snapshot_download_test.py  utils_test.py
test/repo_reader/: reader_test.py
