[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csghub-sdk"
version = "0.7.9"
description = "CSGHub SDK for downloading and uploading models, datasets, and spaces"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "opencsg", email = "contact@opencsg.com" }
]
keywords = ["ai", "machine-learning", "models", "datasets", "huggingface"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8,<3.14"
dependencies = [
    "requests",
    "typer",
    "typing_extensions",
    "huggingface_hub>=0.22.2",
]

[project.optional-dependencies]
train = [
    "torch",
    "transformers>=4.33.3",
    "datasets>=2.20.0"
]

[project.scripts]
csghub-cli = "pycsghub.cli:app"

[project.urls]
Homepage = "https://github.com/opencsg/csghub-sdk"
Documentation = "https://github.com/opencsg/csghub-sdk"
Repository = "https://github.com/opencsg/csghub-sdk"
Issues = "https://github.com/opencsg/csghub-sdk/issues"

[tool.setuptools.packages.find]
include = ["pycsghub*"]

[tool.setuptools.package-data]
pycsghub = ["*"]

[tool.setuptools.dynamic]
version = { attr = "pycsghub.__version__" }
