[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csghub-sdk"
version = "0.8.0"
description = "CSGHub SDK for downloading and uploading models, datasets, and spaces"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "opencsg", email = "contact@opencsg.com" }
]
keywords = ["ai", "machine-learning", "models", "datasets", "huggingface"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">3.9,<=3.14"
dependencies = [
    "requests",
    "typer",
    "typing-extensions",
    "huggingface_hub>=1.2.0",
    "python-dotenv",
]

[project.optional-dependencies]
train = [
    "torch",
    "transformers @ git+https://github.com/huggingface/transformers.git@v5.0.0rc0",
    "datasets>=2.20.0",
    "accelerate>=1.1.0"
]

[project.scripts]
csghub-cli = "pycsghub.cli:app"

[project.urls]
Homepage = "https://github.com/OpenCSGs/csghub-sdk"
Repository = "https://github.com/OpenCSGs/csghub-sdk"
Issues = "https://github.com/OpenCSGs/csghub-sdk"

[tool.setuptools.packages.find]
include = ["pycsghub*"]

[tool.setuptools.package-data]
pycsghub = ["*"]

[tool.setuptools.dynamic]
version = { attr = "pycsghub.__version__" }
